--- a/index.html
+++ b/index.html
@@ -12,21 +12,22 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" class="logo"><span class="logo-web">Web</span>Studio</a>
         <ul>
-          <li><a href="#">Studio</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contacts</a></li>
+          <li><a href="#" class="link-navigation">Studio</a></li>
+          <li><a href="#" class="link-navigation">Portfolio</a></li>
+          <li><a href="#" class="link-navigation">Contacts</a></li>
         </ul>
       </nav>
       <address>
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li><a href="mailto:info@devstudio.com" class="link-address">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111" class="link-address">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
