--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav>
         <a href="./index.html" class="logo"><span class="logo-web">Web</span>Studio</a>
         <ul>
@@ -33,9 +33,9 @@
     </header>
     <main>
       <!-- Hero section -->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero-section">
+        <h1 class="hero-heading">Effective Solutions for Your Business</h1>
+        <button type="button" class="hero-button">Order Service</button>
       </section>
       <!-- Our advantages section -->
       <section>
