--- a/index.html
+++ b/index.html
@@ -42,29 +42,29 @@
         <h2 hidden>Our Advantages</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="advantages-heading">Strategy</h3>
+            <p class="advantages-paragraph">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="advantages-heading">Punctuality</h3>
+            <p class="advantages-paragraph">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="advantages-heading">Diligence</h3>
+            <p class="advantages-paragraph">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="advantages-heading">Technologies</h3>
+            <p class="advantages-paragraph">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
