--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         </ul>
       </section>
       <!-- Our team section -->
-      <section>
-        <h2>Our Team</h2>
+      <section class="our-team-section">
+        <h2 class="our-team-heading">Our Team</h2>
         <ul>
           <li>
             <img
@@ -81,13 +81,13 @@
               alt="Mark Guerrero Photo"
               width="264"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="name">Mark Guerrero</h3>
+            <p class="team-position">Product Designer</p>
           </li>
           <li>
             <img src="./images/TomFord.jpg" alt="Tom Ford Photo" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="name">Tom Ford</h3>
+            <p class="team-position">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -95,8 +95,8 @@
               alt="Camila Garcia Photo"
               width="264"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="name">Camila Garcia</h3>
+            <p class="team-position">Marketing</p>
           </li>
           <li>
             <img
@@ -104,8 +104,8 @@
               alt="Daniel Wilson Photo"
               width="264"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="name">Daniel Wilson</h3>
+            <p class="team-position">UI Designer</p>
           </li>
         </ul>
       </section>
