--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <header class="header">
       <nav>
-        <a href="./index.html" class="logo"><span class="logo-web">Web</span>Studio</a>
+        <a href="./index.html" class="logo-header"><span class="logo-web">Web</span>Studio</a>
         <ul>
           <li><a href="#" class="link-navigation">Studio</a></li>
           <li><a href="#" class="link-navigation">Portfolio</a></li>
@@ -111,7 +111,7 @@
       </section>
       <!-- Our portfolio -->
       <section>
-        <h2>Our portfolio</h2>
+        <h2 class="portfolio-heading">Our portfolio</h2>
         <ul>
           <li>
             <img
@@ -120,8 +120,8 @@
               width="360"
               height="300"
             />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="portfolio-item">Banking App</h3>
+            <p class="portfolio-text">App</p>
           </li>
           <li>
             <img
@@ -130,8 +130,8 @@
               width="360"
               height="300"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-item">Cashless Payment</h3>
+            <p class="portfolio-text">Marketing</p>
           </li>
           <li>
             <img
@@ -140,8 +140,8 @@
               width="360"
               height="300"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="portfolio-item">Meditation App</h3>
+            <p class="portfolio-text">App</p>
           </li>
           <li>
             <img
@@ -150,8 +150,8 @@
               width="360"
               height="300"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-item">Taxi Service</h3>
+            <p class="portfolio-text">Marketing</p>
           </li>
           <li>
             <img
@@ -160,8 +160,8 @@
               width="360"
               height="300"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="portfolio-item">Screen Illustrations</h3>
+            <p class="portfolio-text">Design</p>
           </li>
           <li>
             <img
@@ -170,15 +170,15 @@
               width="360"
               height="300"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-item">Online Courses</h3>
+            <p class="portfolio-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a href="./index.html" class="logo-footer"><span class="logo-web">Web</span>Studio</a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
