--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
@@ -12,12 +14,17 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header class="header">
       <nav>
-        <a href="./index.html" class="logo-header"><span class="logo-web">Web</span>Studio</a>
+        <a href="./index.html" class="logo-header"
+          ><span class="logo-web">Web</span>Studio</a
+        >
         <ul>
           <li><a href="#" class="link-navigation">Studio</a></li>
           <li><a href="#" class="link-navigation">Portfolio</a></li>
@@ -26,8 +33,16 @@
       </nav>
       <address>
         <ul>
-          <li><a href="mailto:info@devstudio.com" class="link-address">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111" class="link-address">+11 (000) 111-11-11</a></li>
+          <li>
+            <a href="mailto:info@devstudio.com" class="link-address"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+110001111111" class="link-address"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
@@ -177,7 +192,9 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="logo-footer"><span class="logo-web">Web</span>Studio</a>
+      <a href="./index.html" class="logo-footer"
+        ><span class="logo-web">Web</span>Studio</a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
