--- a/index.html
+++ b/index.html
@@ -22,24 +22,24 @@
   <body>
     <header class="header">
       <nav>
-        <a href="./index.html" class="logo-header"
-          ><span class="logo-web">Web</span>Studio</a
+        <a href="./index.html" class="logo"
+          >Web<span class="logo-header-studio">Studio</span></a
         >
         <ul>
-          <li><a href="#" class="link-navigation">Studio</a></li>
-          <li><a href="#" class="link-navigation">Portfolio</a></li>
-          <li><a href="#" class="link-navigation">Contacts</a></li>
+          <li><a href="./index.html" class="link-navigation">Studio</a></li>
+          <li><a href="" class="link-navigation">Portfolio</a></li>
+          <li><a href="" class="link-navigation">Contacts</a></li>
         </ul>
       </nav>
       <address>
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com" class="link-address"
+            <a href="mailto:info@devstudio.com" class="header-link-address"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="link-address"
+            <a href="tel:+110001111111" class="header-link-address"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -96,12 +96,12 @@
               alt="Mark Guerrero Photo"
               width="264"
             />
-            <h3 class="name">Mark Guerrero</h3>
+            <h3 class="our-team-name">Mark Guerrero</h3>
             <p class="team-position">Product Designer</p>
           </li>
           <li>
             <img src="./images/TomFord.jpg" alt="Tom Ford Photo" width="264" />
-            <h3 class="name">Tom Ford</h3>
+            <h3 class="our-team-name">Tom Ford</h3>
             <p class="team-position">Frontend Developer</p>
           </li>
           <li>
@@ -110,7 +110,7 @@
               alt="Camila Garcia Photo"
               width="264"
             />
-            <h3 class="name">Camila Garcia</h3>
+            <h3 class="our-team-name">Camila Garcia</h3>
             <p class="team-position">Marketing</p>
           </li>
           <li>
@@ -119,7 +119,7 @@
               alt="Daniel Wilson Photo"
               width="264"
             />
-            <h3 class="name">Daniel Wilson</h3>
+            <h3 class="our-team-name">Daniel Wilson</h3>
             <p class="team-position">UI Designer</p>
           </li>
         </ul>
@@ -192,8 +192,8 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="logo-footer"
-        ><span class="logo-web">Web</span>Studio</a
+      <a href="./index.html" class="logo"
+        >Web<span class="logo-footer-studio">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
