--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
           <li><a href="" class="link-navigation">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="header-link-address">
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com" class="header-link-address"
+            <a href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="header-link-address"
+            <a href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -90,7 +90,7 @@
       <section class="our-team-section">
         <h2 class="our-team-heading">Our Team</h2>
         <ul>
-          <li>
+          <li class="our-team-list">
             <img
               src="./images/MarkGuerrero.jpg"
               alt="Mark Guerrero Photo"
@@ -99,12 +99,12 @@
             <h3 class="our-team-name">Mark Guerrero</h3>
             <p class="team-position">Product Designer</p>
           </li>
-          <li>
+          <li class="our-team-list">
             <img src="./images/TomFord.jpg" alt="Tom Ford Photo" width="264" />
             <h3 class="our-team-name">Tom Ford</h3>
             <p class="team-position">Frontend Developer</p>
           </li>
-          <li>
+          <li class="our-team-list">
             <img
               src="./images/CamilaGarcia.jpg"
               alt="Camila Garcia Photo"
@@ -113,7 +113,7 @@
             <h3 class="our-team-name">Camila Garcia</h3>
             <p class="team-position">Marketing</p>
           </li>
-          <li>
+          <li class="our-team-list">
             <img
               src="./images/DanielWilson.jpg"
               alt="Daniel Wilson Photo"
