--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
           <li><a href="" class="link-navigation">Contacts</a></li>
         </ul>
       </nav>
-      <address class="header-link-address">
+      <address class="address">
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com"
+            <a href="mailto:info@devstudio.com" class="address-link"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111"
+            <a href="tel:+110001111111" class="address-link"
               >+11 (000) 111-11-11</a
             >
           </li>
