added visually hidden selector to our advantages heading

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </section>
       <!-- Our advantages section -->
       <section>
-        <h2 hidden>Our Advantages</h2>
+        <h2 class="visually-hidden">Our Advantages</h2>
         <ul>
           <li>
             <h3 class="advantages-heading">Strategy</h3>
